@@ -94,6 +94,7 @@ determine_real_args() {
 	set_config_with_override 1 EVMS                 CMD_EVMS
 	set_config_with_override 1 DMRAID               CMD_DMRAID
 	set_config_with_override 1 BUSYBOX              CMD_BUSYBOX              "yes"
+	set_config_with_override 1 UNIONFS				CMD_UNIONFS
 	set_config_with_override 1 DISKLABEL            CMD_DISKLABEL
 	set_config_with_override 1 LUKS                 CMD_LUKS
 	set_config_with_override 1 MDADM                CMD_MDADM
